---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"function($x) as xs:integer { $x }\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(InlineFunction(InlineFunction(
      params: [
        Param(
          name: Name(
            name: "x",
            prefix: None,
            namespace: None,
          ),
          type_: None,
        ),
      ],
      return_type: Some(Item(Item(
        item_type: AtomicOrUnionType(Name(
          name: "integer",
          prefix: Some("xs"),
          namespace: Some("http://www.w3.org/2001/XMLSchema"),
        )),
        occurrence: One,
      ))),
      body: Some(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(VarRef(Name(
              name: "x",
              prefix: None,
              namespace: None,
            ))),
          ],
        )),
      ])),
    ))),
  ],
)))
